tests/baselines/reference/parserES5SymbolProperty3.errors.txt
tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty3.ts(2,6): error TS2304: Cannot find name 'Symbol'.


==== tests/cases/conformance/parser/ecmascript5/Symbols/parserES5SymbolProperty3.ts (1 errors) ====
    declare class C {
        [Symbol.unscopables](): string;
         ~~~~~~
!!! error TS2304: Cannot find name 'Symbol'.
    }